--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ResetPasswordActivity"></activity>
+        <activity android:name=".CommentActivity"></activity>
+        <activity android:name=".ResetPasswordActivity" />
         <activity
             android:name=".FindFriendActivity"
             android:parentActivityName=".MainActivity" />
